<resources>
    <string name="app_name">手機食先</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_loading">Loading...</string>
    <string name="common_error">Error</string>
    <string name="common_success">Success</string>
    <string name="common_permission_denied">Permission Denied</string>
    <string name="common_male">Male</string>
    <string name="common_female">Female</string>
    <string name="common_unspecified">Unspecified</string>
    <string name="a1_other_ways_to_login">Other ways to login</string>
    <string name="a1_login">Login</string>
    <string name="a1_register">Register</string>
    <string name="a1_guest_mode">Guest Mode</string>
    <string name="a2_your_email_to_login">Your Email to Login</string>
    <string name="a2_your_display_name">Your Display Name</string>
    <string name="a2_your_password">Your Password</string>
    <string name="a2_confirm_your_password">Confirm Your Password</string>
    <string name="a2_register">Register</string>
    <string name="a2_login">Login</string>
    <string name="a3_login">Login</string>
    <string name="a3_your_email_to_login">Your Email to Login</string>
    <string name="a3_your_password">Your Password</string>
    <string name="a3_forgot_password">Forgot Password</string>
    <string name="a3_register">Register</string>
    <string name="a5_your_registered_email">Your Registered Email</string>
    <string name="a5_reset_password">Reset Password</string>
    <string name="s2_map_view">Subway</string>
    <string name="s1_like">Like</string>
    <string name="s1_navigate">Navigate</string>
    <string name="side_menu_home_page">Home Page</string>
    <string name="side_menu_profile">Profile</string>
    <string name="side_menu_settings">Settings</string>
    <string name="side_menu_login_and_register">Login &amp; Register</string>
    <string name="s2_filter">Filter</string>
    <string name="s2_district">District</string>
    <string name="s2_dish">Dish</string>
    <string name="s2_spendings">Spendings</string>
    <string name="s2_hot_hashtags">Hot Hashtags</string>
    <string name="s2_search">Search</string>
    <string name="s2_more_filters">More &gt;</string>
    <string name="s2_error_specify">Please specify something to search.</string>
    <string name="s3_search_district">Search District</string>
    <string name="s3_all">All</string>
    <string name="s4_spendings">Spendings</string>
    <string name="s4_all">All</string>
    <string name="s5_search_dish">Search Dish</string>
    <string name="p1_posts">Posts</string>
    <string name="p1_followings">Followings</string>
    <string name="p1_followers">Followers</string>
    <string name="p1_gallery">Gallery</string>
    <string name="p1_favourites">Favourites</string>
    <string name="p5_followings">Followings</string>
    <string name="p5_followers">Followers</string>
    <string name="p1a_take_a_new_photo">Take a New Photo</string>
    <string name="p1a_choose_from_album">Choose from Album</string>
    <string name="p1a_cancel">Cancel</string>
    <string name="s12_post">Post</string>
    <string name="s12_title_food_name">Title (Food Name)</string>
    <string name="s12_restaurant_name">Restaurant name</string>
    <string name="s12_restaurant_address">Restaurant address</string>
    <string name="s12_spendings">Spendings</string>
    <string name="s12_dish">Dish</string>
    <string name="s12_comments">Comments</string>
    <string name="s12_hashtags">Hashtags</string>
    <string name="s12_add_photo">Add Photo</string>
    <string name="s12_submit">Submit</string>
    <string name="s12_take_a_new_photo">Take a New Photo</string>
    <string name="s12_choose_from_album">Choose from Album</string>
    <string name="s13a_address">Address</string>
    <string name="s13a_add">Add %1$s restaurant</string>
    <string name="s13a_add_text1">Add</string>
    <string name="s13a_add_text2">restaurant</string>
    <string name="p1b_gallery">Gallery</string>
    <string name="p1b_footprints">Footprints</string>
    <string name="p1c_turn_on_notifications">Turn on Notifications</string>
    <string name="p1c_turn_off_notifications">Turn off Notifications</string>
    <string name="p1c_cancel">Cancel</string>
    <string name="p6_report_inappropriate">Report Inappropriate</string>
    <string name="p6_specify_the_reason">Specify the Reason</string>
    <string name="p6_input_other_reason">Input Other Reason</string>
    <string name="p6_submit">Submit</string>
    <string name="notification_shared_a_snap_post">shared a Snap Post</string>
    <string name="s10_share">Share</string>
    <string name="s10_food_of_this_restaurant">Food of this Restaurant</string>
    <string name="s10_report">Report</string>
    <string name="s11_food_of_this_restaurant">Food of this Restaurant</string>
    <string name="g1_enable_gps_location_service">Enable GPS Location Service</string>
    <string name="g1_cancel">Cancel</string>
    <string name="g1_enable">Enable</string>
    <string name="s10a_cancel">Cancel</string>
    <string name="s10a_your_friend">Your friend</string>
    <string name="s10a_shared_a_snap_post">shared a Snap Post</string>
    <string name="a6_settings">Settings</string>
    <string name="a6_my_account">My Account</string>
    <string name="a6_connected_services">Connected Services</string>
    <string name="a6_language">Language</string>
    <string name="a6_about">About</string>
    <string name="a6_change_password">Change Password</string>
    <string name="a6_logout">Logout</string>
    <string name="a6_login">Login</string>
    <string name="a7_my_account">My Account</string>
    <string name="a7_username">Username</string>
    <string name="a7_gender">Gender</string>
    <string name="a7_phone">Phone</string>
    <string name="a7_email">Email</string>
    <string name="a7_hashtags">Hashtags</string>
    <string name="a7_introduction">Introduction</string>
    <string name="a7_change_avatar">Change Avatar</string>
    <string name="a7_done">Done</string>
    <string name="a7a_take_a_new_photo">Take a New Photo</string>
    <string name="a7a_choose_from_album">Choose from Album</string>
    <string name="a7a_cancel">Cancel</string>
    <string name="settings_social_connected_services">Connected Services</string>
    <string name="a10_version_number">Version Number</string>
    <string name="a10_disclaimer">Disclaimer</string>
    <string name="a11_disclaimer">Disclaimer</string>
    <string name="a11_disclaimer_txt">哈根达斯原为美国冰激凌品牌，1921年由鲁本·马特斯(Reuben Mattus)研制成功，并于1962在美国纽约布朗克斯命名并上市。1983年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下3年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用。哈根达斯原为美国冰激凌品牌，1921年由鲁本·马特斯(Reuben Mattus)研制成功，并于1962在美国纽约布朗克斯命名并上市。1983年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下3年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用。哈根达斯原为美国冰激凌品牌，1921年由鲁本·马特斯(Reuben Mattus)研制成功，并于1962在美国纽约布朗克斯命名并上市。1983年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下3年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用。哈根达斯原为美国冰激凌品牌，1921年由鲁本·马特斯(Reuben Mattus)研制成功，并于1962在美国纽约布朗克斯命名并上市。1983年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下3年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用。哈根达斯原为美国冰激凌品牌，1921年由鲁本·马特斯(Reuben Mattus)研制成功，并于1962在美国纽约布朗克斯命名并上市。1983年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下3年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用。哈根达斯原为美国冰激凌品牌，1921年由鲁本·马特斯(Reuben Mattus)研制成功，并于1962在美国纽约布朗克斯命名并上市。1983年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下3年，哈根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用磨坊公司（General Mills Inc.）旗下根达斯出售给品斯乐公司（The Pillsbury Company）之后，品斯乐公司纳入通用。</string>
    <string name="a12_change_password">Change Password</string>
    <string name="a12_old_password">Old Password</string>
    <string name="a12_new_password">New Password</string>
    <string name="a12_enter_new_password_again">Enter new password again</string>
    <string name="a12_save">Save</string>
    <string name="a13_language">Language</string>
    <string name="a13_english">English</string>
    <string name="a13_traditional_chinese">Traditional Chinese</string>
    <string name="a13_simplified_chinese">Simplified Chinese</string>
    <string name="error_empty">%1$s must not be empty</string>
    <string name="error_invalid">%1$s is invalid</string>
    <string name="error_max_length">%1$s length must be %2$d - %3$d</string>
    <string name="error_max_length_hashtag">Hashtag maximum length is %1$d</string>
    <string name="error_empty_username">Username must not be empty</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_empty_email">Email must not be empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_minimum_password">Password minimum length is %1$d</string>
    <string name="error_empty_password">Password must not be empty</string>
    <string name="error_empty_conf_password">Confirm Password must not be empty</string>
    <string name="error_passwords_not_equal">Password and Confirm Password must be the same</string>
    <string name="error_empty_snap_title">Title must not be empty</string>
    <string name="error_invalid_snap_title">Title must not be empty</string>
    <string name="error_empty_snap_hashtags">Hashtags must not be empty</string>
    <string name="error_empty_snap_comments">Password and Confirm Password must be the same</string>
    <string name="error_minimum_no_images">You have to upload a photo</string>
    <string name="error_maximum_no_images">You can upload no more than 5 photos</string>
    <string name="error_gps_unavailable">GPS Unavailable</string>
    <string name="error_status_101">Error. Invalid request parameters.</string>
    <string name="error_status_102">Error. Invalid parameter values.</string>
    <string name="error_status_103">Error. Server error.</string>
    <string name="error_status_104">Error. Duplicate Email.</string>
    <string name="error_status_105">Error. Invalid request parameters.</string>
    <string name="error_status_106">Error. Duplicate Username</string>
    <string name="error_status_107">Error. User deactivated.</string>
    <string name="error_status_200">Error. Duplicate User.</string>
    <string name="error_status_400">Error. Invalid username/password</string>
    <string name="error_status_401">Error. User blocked</string>
    <string name="error_status_500">Error. Invalid username/password</string>
    <string name="error_status_501">Error. User blocked</string>
    <string name="error_no_data">No results</string>
    <string name="error_no_image_to_share">No image to share</string>
    <string name="error_not_allowed_search_by_user_hash">Error. Cannot search both Hashtag and User at the same time.</string>
    <string name="error_cannot_process_request">Cannot process your request right now. Please try again.</string>
    <string name="error_no_more_snap">No more snaps..</string>
    <string name="leave_page">Are you sure you want to leave this page?</string>
    <string name="choose_gender">Choose Gender</string>
</resources>