<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGrey"
    android:orientation="vertical"
    android:clickable="true"
    tools:context="com.accordhk.SnapNEat.fragments.SettingsChangePasswordFragment">

    <include layout="@layout/actionbar_back_title_submit"
        android:id="@+id/inc_action_bar" />

    <com.accordhk.SnapNEat.utils.CustomFontEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_old_password"
        android:textColor="@color/colorText"
        android:textSize="@dimen/font_28"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@android:color/white"
        android:hint="@string/a12_old_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@null" />

    <com.accordhk.SnapNEat.utils.CustomFontEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_new_password"
        android:textColor="@color/colorText"
        android:textSize="@dimen/font_28"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:hint="@string/a12_new_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@null" />

    <com.accordhk.SnapNEat.utils.CustomFontEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_conf_new_password"
        android:textColor="@color/colorText"
        android:textSize="@dimen/font_28"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:hint="@string/a12_enter_new_password_again"
        android:inputType="textPassword"
        android:textCursorDrawable="@null" />

</LinearLayout>
