<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_choose_photo"
    android:padding="@dimen/fab_margin"
    android:background="#A666"
    android:clickable="true"
    android:visibility="gone">

    <com.accordhk.SnapNEat.utils.CustomFontButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/common_cancel"
        android:textColor="@color/colorGrey"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_bg_white"
        android:textSize="@dimen/font_32"
        android:textAllCaps="false"
        android:id="@+id/btn_cancel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/lv_horizontal_divider"
        android:showDividers="middle"
        android:padding="@dimen/fab_margin"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/btn_cancel"
        android:background="@drawable/s12_share_background_shape">

        <com.accordhk.SnapNEat.utils.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s12_take_a_new_photo"
            android:gravity="center"
            android:textColor="@color/colorTextBlue"
            android:paddingTop="0dp"
            android:paddingBottom="15dp"
            android:textSize="@dimen/font_32"
            android:id="@+id/settings_account_avatar_change_take_new_photo"

            />

        <com.accordhk.SnapNEat.utils.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s12_choose_from_album"
            android:id="@+id/settings_account_avatar_change_choose_from_album"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="0dp"
            android:textSize="@dimen/font_32"
            android:textColor="@color/colorTextBlue"
            />

    </LinearLayout>

</RelativeLayout>
