<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.accordhk.SnapNEat.fragments.RegisterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:layout_gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_marker"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/icon_sel_tab"
            android:layout_alignParentRight="true"
            android:layout_weight="1"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_marker">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal">

            <com.accordhk.SnapNEat.utils.CustomFontEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_username"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/com_margin_l"
                android:hint="@string/a2_your_display_name"
                app:theme="@style/CustomEditTextWhite"
                android:width="@dimen/com_et_width"
                android:textSize="@dimen/font_24"
                android:textColor="@android:color/white"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:textCursorDrawable="@null" />

            <com.accordhk.SnapNEat.utils.CustomFontEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email"
                android:layout_gravity="center_horizontal"
                android:hint="@string/a2_your_email_to_login"
                android:layout_marginTop="@dimen/fab_margin"
                app:theme="@style/CustomEditTextWhite"
                android:width="@dimen/com_et_width"
                android:textSize="@dimen/font_24"
                android:textColor="@android:color/white"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:textCursorDrawable="@null" />

            <com.accordhk.SnapNEat.utils.CustomFontEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/a2_your_password"
                android:layout_marginTop="@dimen/fab_margin"
                app:theme="@style/CustomEditTextWhite"
                android:textSize="@dimen/font_24"
                android:width="@dimen/com_et_width"
                android:textColor="@android:color/white"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:textCursorDrawable="@null" />

            <com.accordhk.SnapNEat.utils.CustomFontEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_confirm_password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/a2_confirm_your_password"
                android:layout_marginTop="@dimen/fab_margin"
                app:theme="@style/CustomEditTextWhite"
                android:textSize="@dimen/font_24"
                android:width="@dimen/com_et_width"
                android:textColor="@android:color/white"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:textCursorDrawable="@null" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2_register"
                android:id="@+id/btn_register"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/com_margin_xl"
                android:width="@dimen/com_btn_width"
                android:background="@drawable/btn_bg_white"
                android:textSize="@dimen/font_32"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@android:color/transparent">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
